fix overflow on IOS

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,3 +39,10 @@ body {
 .img {
   @apply w-full h-[200px];
 }
+
+
+
+.overflow-hidden {
+  height: 100vh;
+  overflow: hidden;
+}
